# recall

./: .gitignore  AGENTS.md  install.sh  pyproject.toml  uninstall.sh
.agents/plans/: 2026-03-16-1600-recall-mvp.md  2026-03-19-1530-json-output.md  2026-03-19-1600-transcript-indexing.md  2026-03-25-1030-seshctl-recall-integration.md  2026-04-08-1700-fix-hyphen-decoding.md  2026-04-13-1200-use-cwd-for-project-path.md
recall/: cli.py  embedding.py  index.py  search.py
recall/adapters/: __init__.py  base.py  claude.py  codex.py  gemini.py
tests/: test_claude_adapter.py  test_embedding.py  test_json_output.py  test_resume_command.py
