[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recall"
version = "0.1.0"
description = "Semantic search across AI agent conversation history"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers",
    "numpy",
    "tqdm",
]

[project.scripts]
recall = "recall.cli:main"
